# Inside of setup.cfg
[metadata]
name = socube
version =1.0
author = Zhang.H.N
author_email = zhang.h.n@foxmail.com
description = A simple python package for doublet detection in scRNA-seq data
url = https://github.com/idrblab/SoCube
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: OS Independent
    Environment :: Console
include_package_data = True
license = MIT License
