# Inside of setup.cfg
[metadata]
name = socube
description = A simple python package for doublet detection in scRNA-seq data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: OS Independent
    Environment :: Console
include_package_data = True
license = MIT License
